@@ -15,9 +15,9 @@ my $podfile  = File::Temp->new;
 my $textfile = File::Temp->new;
 
 print $podfile "\n=head1 TEST tree's undef\n"
-	. "\n=for stopwords zpaph myormsp pleumgh\n"
+	. "\n=for stopwords zpaph myormsp pleumgh bruble-gruble\n"
 	. "\n=for :stopwords !myormsp furble\n\n Glakq\n"
-	. "\nPleumgh zpaph's myormsp snickh furbles.\n\n"
+	. "\nPleumgh bruble-gruble zpaph's zpaph-kafdkaj myormsp snickh furbles.\n\n"
 	;
 
 # reread from beginning
@@ -32,11 +32,11 @@ $textfile->seek( 0, 0 );
 
 my $in = do { local $/ = undef, <$textfile> };
 
-my @words = $in =~ m/([a-z']+)/ig;
+my @words = $in =~ m/([a-z'-]+)/ig;
 
-is scalar @words, 4, 'word count';
+is scalar @words, 5, 'word count';
 
-cmp_deeply \@words, bag( qw( TEST tree's myormsp snickh ) ), 'words match'
+cmp_deeply \@words, bag( qw( TEST tree's kafdkaj myormsp snickh ) ), 'words match'
     or diag "@words";
 
 done_testing;
